--- a/index.html
+++ b/index.html
@@ -4,46 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>PROYECTO 2 CRUD</title>
 </head>
 <body>
     
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Recomendaciones</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Gimnasios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Tips</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+        <ul class="nav justify-content-center navbar navbar-dark bg-dark">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Recomendaciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Gimnasios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tips</a>
+            </li>
+        </ul>
     </header>
 
     <div>
-        <h2>Registro, nuevas suscripciones</h2>
+        <h2 class="container mt-5 w-50">Registro, nuevas suscripciones</h2>
     </div>
-    <div class="container mt-5 w-50">
-    <!-- Aqu[i iran los input y botones de agregar] -->
+    <div id="formulario" class="container mt-2 w-50">
         <b>Ingresa tus datos:</b>
+    </div>
+    <div id="formulario" class="container mt-2 w-50">
         <div class="row mt-3 col">
-            <input type="text" class="form-control" placeholder="Nombre y Apellidos" aria-label="First name">
+            <input id="nomyap" type="text" class="form-control" placeholder="Nombre y Apellidos" aria-label="First name">
         </div>
         <div class="row mt-3 col">
-            <input type="mail" class="form-control" placeholder="Correo" aria-label="First name">
+            <input id="correo" type="mail" class="form-control" placeholder="Correo" aria-label="First name">
         </div>
         <div class="row mt-3 col">
-            <input type="text" class="form-control" placeholder="Teléfono" aria-label="First name">
+            <input id="tel" type="text" class="form-control" placeholder="Teléfono" aria-label="First name">
         </div>
         <button type="button" class="btn btn-secondary mt-3">Agregar</button>
 
@@ -51,7 +46,7 @@
     </div>
     <div class="container">
     <!-- Aqui va el listado render de lo que se vaya guardando, junto con los botones de editar y eliminar -->
-      <table class="table mt-3">
+      <table class="table mt-3 mb-5">
         <thead>
           <tr>
             <th scope="col">Nombre y Apellidos</th>
@@ -60,26 +55,29 @@
             <th scope="col">Acciones</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="listaRegistros">
           <tr>
             <th scope="row">Jorge Alejandro Solis M[arquez</th>
             <td>jorge.solmar</td>
             <td>4492034053</td>
             <td>
-                <button type="button" class="btn btn-success">Success</button>
-                <button type="button" class="btn btn-danger">Danger</button>
+                <button type="button" class="btn btn-success">Editar</button>
+                <button type="button" class="btn btn-danger">Eliminar</button>
             </td>
           </tr>
         </tbody>
       </table>
-
-
-
-
-
     </div>
 
 
+    <footer class="w-100 p-3 h-auto">
+        <br>    
+        <p class="falsa">Todos los derechos reservados.<br>
+        (Jorge A Solis)
+        <br>
+        Proyecto de aplicación CRUD (Página ficticia).</p>
+    </footer>
     
+<script src="./index.js"></script>
 </body>
 </html>
