--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div>
         <h2 class="container mt-5 w-50">Registro, nuevas suscripciones</h2>
     </div>
-    <div id="formulario" class="container mt-2 w-50">
+    <div class="container mt-2 w-50">
         <b>Ingresa tus datos:</b>
     </div>
-    <div id="formulario" class="container mt-2 w-50">
+    <form id="formulario" class="container mt-2 w-50">
         <div class="row mt-3 col">
             <input id="nomyap" type="text" class="form-control" placeholder="Nombre y Apellidos" aria-label="First name">
         </div>
@@ -38,12 +38,13 @@
             <input id="correo" type="mail" class="form-control" placeholder="Correo" aria-label="First name">
         </div>
         <div class="row mt-3 col">
-            <input id="tel" type="text" class="form-control" placeholder="Teléfono" aria-label="First name">
+            <input id="telefono" type="text" class="form-control" placeholder="Teléfono" aria-label="First name">
         </div>
-        <button type="button" class="btn btn-secondary mt-3">Agregar</button>
+        <button type="submit" class="btn btn-secondary mt-3">Guardar</button>
+        
 
         
-    </div>
+    </form>
     <div class="container">
     <!-- Aqui va el listado render de lo que se vaya guardando, junto con los botones de editar y eliminar -->
       <table class="table mt-3 mb-5">
